# VortexConfig

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  Sample.cfv  Sample.vcfg  VortexConfig.h  main.cpp
include/: VortexConfig.h
include/vcfg/: VortexConfig.h  compatibility.h  implementation.h  macros.h  parser.h  strconv.h
src/: main.cpp
